// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MongoConnection should connect and persist 1`] = `Object {}`;

exports[`MongoConnection should connect and persist 2`] = `
Object {
  "dbName": Object {},
}
`;

exports[`MongoConnection should connect and persist 3`] = `
Object {
  "dbName": Object {
    "coName": Object {
      "data": Array [],
      "indices": Array [],
    },
  },
}
`;

exports[`MongoConnection should connect and persist 4`] = `
Object {
  "dbName": Object {
    "coName": Object {
      "data": Array [],
      "indices": Array [
        Object {
          "index": Object {
            "index": true,
          },
          "options": Object {
            "options": true,
          },
        },
      ],
    },
  },
}
`;

exports[`MongoConnection should connect and persist 5`] = `
Object {
  "dbName": Object {
    "coName": Object {
      "data": Array [
        Object {
          "data": Object {
            "number": 12345,
            "string": "string",
          },
          "group": "1",
          "id": "1",
          "version": 0,
        },
      ],
      "indices": Array [
        Object {
          "index": Object {
            "index": true,
          },
          "options": Object {
            "options": true,
          },
        },
      ],
    },
  },
}
`;

exports[`MongoConnection should connect and persist 6`] = `
Object {
  "dbName": Object {
    "coName": Object {
      "data": Array [
        Object {
          "data": Object {
            "number": 12345,
            "string": "string",
          },
          "group": "1",
          "id": "1",
          "version": 0,
        },
        Object {
          "data": Object {
            "arr": Array [],
            "bool": true,
          },
          "group": "1",
          "id": "2",
          "version": 0,
        },
      ],
      "indices": Array [
        Object {
          "index": Object {
            "index": true,
          },
          "options": Object {
            "options": true,
          },
        },
      ],
    },
  },
}
`;

exports[`MongoConnection should connect and persist 7`] = `
Object {
  "dbName": Object {
    "coName": Object {
      "data": Array [
        Object {
          "data": Object {
            "number": 12345,
            "string": "string",
          },
          "group": "1",
          "id": "1",
          "version": 0,
        },
        Object {
          "data": Object {
            "arr": Array [],
            "bool": true,
          },
          "group": "1",
          "id": "2",
          "version": 1,
        },
      ],
      "indices": Array [
        Object {
          "index": Object {
            "index": true,
          },
          "options": Object {
            "options": true,
          },
        },
      ],
    },
  },
}
`;

exports[`MongoConnection should connect and persist 8`] = `
Object {
  "data": Object {
    "number": 12345,
    "string": "string",
  },
  "group": "1",
  "id": "1",
  "version": 0,
}
`;

exports[`MongoConnection should connect and persist 9`] = `
MongoInMemoryCursor {
  "data": Array [
    Object {
      "data": Object {
        "number": 12345,
        "string": "string",
      },
      "group": "1",
      "id": "1",
      "version": 0,
    },
    Object {
      "data": Object {
        "arr": Array [],
        "bool": true,
      },
      "group": "1",
      "id": "2",
      "version": 1,
    },
  ],
}
`;

exports[`MongoConnection should connect and persist 10`] = `
Object {
  "dbName": Object {
    "coName": Object {
      "data": Array [],
      "indices": Array [
        Object {
          "index": Object {
            "index": true,
          },
          "options": Object {
            "options": true,
          },
        },
      ],
    },
  },
}
`;
